--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "helmet": "^3.20.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.2",
+    "react-router-dom": "^5.1.2",
     "sqlite3": "^4.1.0"
   },
   "devDependencies": {
